# GProfiles

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/fonts/ArchivoBlack/: LICENSE
src/: callbacks.rs  config.rs  extract.rs  handler.rs  image.rs  interface.rs  load.rs  main.rs  objects.rs  processes.rs  types.rs  ui.rs  utils.rs
src/remapper/: keyboard.rs  listener.rs  mod.rs
src/settings/: applications.rs  keymapper.rs  mod.rs  profiles.rs
src/types/: gprofiles.rs  logitech.rs  mod.rs  utils.rs
ui/: applications.slint  appwindow.slint  attribution.slint  components.slint  editor.slint  objects.slint  processes.slint  profiles.slint  text.slint
ui/objects/: games.slint  keymapper.slint  processes.slint
