[package]
name = "gprofiles"
version = "1.0.0-alpha.1"
authors = ["Lee-matod <lee.underscore.matod@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"
winres = "0.1.12"

[[bin]]
name = "GProfiles"
path = "src/main.rs"
